[gd_scene load_steps=16 format=3 uid="uid://fk2ws4nkdayk"]

[ext_resource type="Script" uid="uid://j801jgkt1mf" path="res://game/player/weapon.gd" id="1_57hh3"]
[ext_resource type="AudioStream" uid="uid://dlklosv5cft1n" path="res://game/player/gun_shot_smg_rand.tres" id="2_7w4b6"]
[ext_resource type="AudioStream" uid="uid://dlefj36iolvdv" path="res://game/weapons/pickup_smg 01.wav" id="2_pkk1y"]
[ext_resource type="PackedScene" uid="uid://cbt4a74g6fyhs" path="res://game/weapons/model/weapon_smg.glb" id="3_7w4b6"]
[ext_resource type="AudioStream" uid="uid://c1umsegk5hevb" path="res://game/weapons/pickup_smg 02.wav" id="3_81lhf"]
[ext_resource type="PackedScene" uid="uid://dqul5y672j5k2" path="res://game/weapons/model/weapon_smg_arm.glb" id="4_ujfyf"]
[ext_resource type="PackedScene" uid="uid://dn8qcdsnyofpu" path="res://game/weapons/model/muzzleflash.tscn" id="5_8w3g1"]
[ext_resource type="Script" uid="uid://dntd1fqlvxqh5" path="res://game/weapons/weapon_smg_animations.gd" id="6_yuge1"]
[ext_resource type="AudioStream" uid="uid://bw1o76708a7dx" path="res://content/sfx/gun_shot_smg.wav" id="7_bl6n7"]
[ext_resource type="PackedScene" uid="uid://cdy80iee3cmu0" path="res://game/weapons/pickup_glow.tscn" id="10_81lhf"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7w4b6"]
radius = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6ml3f"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ls1xp"]
top_radius = 0.01
bottom_radius = 0.01
height = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_on6gv"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_3pcvd"]
size = Vector3(0.005, 0.07, 0.04)

[node name="WeaponSmg" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_57hh3")
fire_rate = 0.12
auto = true
recoil = 0.2
ammo = 20
pickup_sounds = Array[AudioStream]([ExtResource("2_pkk1y"), ExtResource("3_81lhf")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_7w4b6")

[node name="AudioShoot" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_7w4b6")
volume_db = 5.0
bus = &"SFX"

[node name="WorldModel" type="Node3D" parent="."]

[node name="RightHand" type="Marker3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0971346)

[node name="LeftHand" type="Marker3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0891441)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.000823617, 0.0554796)
visible = false
material_override = SubResource("StandardMaterial3D_6ml3f")
mesh = SubResource("CylinderMesh_ls1xp")
skeleton = NodePath("../../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 0.990105, -0.140331, 0, 0.140331, 0.990105, 0, -0.0524004, -0.0874176)
visible = false
material_override = SubResource("StandardMaterial3D_on6gv")
mesh = SubResource("BoxMesh_3pcvd")

[node name="weapon_smg" parent="WorldModel" instance=ExtResource("3_7w4b6")]

[node name="Hand" parent="WorldModel/weapon_smg" instance=ExtResource("4_ujfyf")]
unique_name_in_owner = true
visible = false

[node name="ShellEjection" type="Marker3D" parent="WorldModel"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00567615, 0.00567617)

[node name="Muzzleflash" parent="." instance=ExtResource("5_8w3g1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.265738)

[node name="Animations" type="Node" parent="."]
script = ExtResource("6_yuge1")

[node name="AudioShootNPC" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
top_level = true
stream = ExtResource("7_bl6n7")
volume_db = -6.0
bus = &"SFX"

[node name="AudioPickup" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="PickupGlow" parent="." instance=ExtResource("10_81lhf")]

[editable path="WorldModel/weapon_smg"]
